Fixes header z-index

--- a/src/assets/sass/_components/_components.trump-hillary-container.scss
+++ b/src/assets/sass/_components/_components.trump-hillary-container.scss
@@ -4,19 +4,19 @@
   flex-wrap: nowrap;
   align-items: stretch;
   width: 100%;
-  height: 100vh;
 
   @media screen and (min-width: #{map-get($breakpoints, medium)}) {
-    position: relative;
+    position: absolute;
   }
 
   .trump-hillary-container__trump,
   .trump-hillary-container__hillary {
     position: relative;
+    z-index: 899;
     flex: 1 1 auto;
     align-self: stretch;
     transition: all .2s ease;
-    height: 100%;
+    height: 100vh;
     width: 50%;
     overflow: hidden;
 
